--- a/src/css/admin.css
+++ b/src/css/admin.css
@@ -117,3 +117,24 @@ main section{
     color: #666;
     cursor: pointer;
 }
+.hide{
+    display: none!important;
+}
+.uploading{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: rgba(0,0,0,0.5);
+    z-index: 1;
+}
+.uploading span{
+    background: #fff;
+    color: lightgreen;
+    padding: 10px;
+    border-radius: 4px;
+}
