--- a/src/css/admin.css
+++ b/src/css/admin.css
@@ -35,7 +35,7 @@ main aside{
     height: 100%;
     overflow: auto;
     border-right: 1px solid #ddd;
-    position: relative;
+    padding-bottom: 8vh;
 }
 main section{
     width: 78%;
@@ -47,7 +47,7 @@ main section{
     flex-direction: column;
 }
 
-.wrap{
+section .wrap{
     padding: 80px 100px;
     border: 1px dashed #ccc;
     border-radius: 5%;
@@ -77,6 +77,10 @@ main section{
    border-radius: 4px;
     font-size: 1.1em;
     margin-top: 10px;
+    cursor: pointer;
+}
+.submit:focus{
+    outline: none;
 }
 .songlist li{
     display: flex;
@@ -93,8 +97,11 @@ main section{
     font-size: 2em;
     margin-right: 20px;
 }
+.songlist li .listwrap{
+    max-width:70%;
+}
 .songlist li .songname{
-    font-size: 1.1em;
+    font-size: 0.9em;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -107,10 +114,15 @@ main section{
     position: absolute;
     left: 0;
     bottom: 0;
-    background: linear-gradient(180deg, rgba(0,0,0,0) 0, #F2F2F2 49%, #E8E8E8 100%);
-    width: 100%;
-    height: 6vh;
+    background: linear-gradient(180deg, #fff 0, #F2F2F2 49%, #E8E8E8 100%);
+    height: 8vh;
     border-top: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    width: 22%;
+
+}
+#upbtn{
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
