--- a/src/css/index.css
+++ b/src/css/index.css
@@ -24,6 +24,7 @@ header{
     position: fixed;
     top: 0;
     z-index: 1;
+    width: 100%;
 }
 main{
     height: 100vh;
@@ -33,7 +34,7 @@ header .logo{
     display: flex;
     align-items: center;
     height: 100%;
-    width: 40%;
+    width: 9em;
 }
 header svg{
     width: 100%;
@@ -99,8 +100,8 @@ nav .tablist li.active::before{
 
 .songlist .row{
     display: flex;
-    height: 27vh;
     justify-content: space-between;
+    padding-bottom: 1vh;
 }
 .songlist .row .pic .playnum{
     position: absolute;
@@ -118,12 +119,12 @@ nav .tablist li.active::before{
 }
 .songlist .row .pic{
     width: 32.8%;
-    background: url("../images/poster.jpg") no-repeat;
-    background-size: contain;
     display: flex;
-    align-items: flex-end;
-    padding-bottom: 2vh;
+    flex-direction: column;
     position: relative;
+}
+.songlist .row .pic img{
+    width: 100%;
 }
 .songlist .row .pic::before{
     content: '';
@@ -133,33 +134,16 @@ nav .tablist li.active::before{
     height: 15%;
     background: linear-gradient(to bottom,rgba(0,0,0,0.2) 0,transparent 100%);
     top: 0;
+    left: 0;
 }
-.songlist .row:nth-of-type(1) .pic:nth-of-type(2){
-    background: url("../images/poster1.jpg") no-repeat;
-    background-size: contain;
-}
-.songlist .row:nth-of-type(1) .pic:nth-of-type(3){
-    background: url("../images/poster2.jpg") no-repeat;
-    background-size: contain;
-}
-.songlist .row:nth-of-type(2) .pic:nth-of-type(1){
-    background: url("../images/poster3.jpg") no-repeat;
-    background-size: contain;
-}
-.songlist .row:nth-of-type(2) .pic:nth-of-type(2){
-    background: url("../images/poster4.jpg") no-repeat;
-    background-size: contain;
-}
-.songlist .row:nth-of-type(2) .pic:nth-of-type(3){
-    background: url("../images/poster5.jpg") no-repeat;
-    background-size: contain;
-}
+
 .songlist .row .pic .desc{
     font-size: 0.87em;
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
+    padding-top: 1vh;
 }
 
 .newlist{
@@ -207,7 +191,7 @@ nav .tablist li.active::before{
     margin :2vh auto 0 auto;
     padding: 0.5em 0;
     text-align: center;
-    border-radius: 8%/50%;
+    border-radius: 1.2em/50%;
 }
 .bot .copyright{
     color: #8F9092;
