--- a/src/css/admin.css
+++ b/src/css/admin.css
@@ -35,7 +35,7 @@ main aside{
     height: 100%;
     overflow: auto;
     border-right: 1px solid #ddd;
-    padding-bottom: 8vh;
+    padding-bottom: 12vh;
 }
 main section{
     width: 78%;
@@ -113,15 +113,26 @@ section .wrap{
 #uparea{
     position: absolute;
     left: 0;
-    bottom: 0;
+    bottom: 6vh;
     background: linear-gradient(180deg, #fff 0, #F2F2F2 49%, #E8E8E8 100%);
-    height: 8vh;
+    height: 6vh;
     border-top: 1px solid #ddd;
     border-right: 1px solid #ddd;
     width: 22%;
 
 }
-#upbtn{
+#uparea_poster{
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    background: linear-gradient(180deg, #fff 0, #F2F2F2 49%, #E8E8E8 100%);
+    height: 6vh;
+    border-top: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    width: 22%;
+
+}
+#upbtn,#up_poster_btn{
     height: 100%;
     display: flex;
     justify-content: center;
